--- a/nginx/templates/secret.yaml
+++ b/nginx/templates/secret.yaml
@@ -3,6 +3,6 @@ apiVersion: v1
 metadata:
   name: nginxconf                           
   annotations:
-    avp.kubernetes.io/path: "avp/data/test"
+    avp.kubernetes.io/path: "accuknox/data/nginx"
 data:
   sample-secret: <sample>
